samples/_failures_safe/1761316574_a36f0c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f07ac33f.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_f07ac33f.c:145:47: error: expected ‘)’ at end of input
  145 |     printf("Info count: %u\n", analyzer->stats
      |           ~                                   ^
      |                                               )
./samples/SAFE/__tmp_f07ac33f.c:145:5: error: expected declaration or statement at end of input
  145 |     printf("Info count: %u\n", analyzer->stats
      |     ^~~~~~
